# sistema-recomendacion-lms

./: README.md  config.py  paso1_generar_datos.py  paso2_analisis_exploratorio.py  paso3_modelo_contenido.py  paso4_modelo_colaborativo.py  paso5_modelo_hibrido.py  paso6_evaluacion.py  pyproject.toml  requirements.txt
