[project]
name = "tfm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11, <3.12"
dependencies = [
    "faiss-cpu==1.8.0",
    "faker==24.4.0",
    "lightfm-next>=1.19.0",
    "matplotlib==3.8.3",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "scikit-learn==1.4.1.post1",
    "scipy==1.12.0",
    "seaborn==0.13.2",
    "sentence-transformers==2.6.1",
]
